tests/compile-fail/serde_cloneable_without_marker.stderr
error[E0277]: the trait bound `CloneableStringInner: SerializableSecret` is not satisfied
  --> tests/compile-fail/serde_cloneable_without_marker.rs:19:35
   |
19 |     let _ = serde_json::to_string(&pw);
   |             --------------------- ^^^ the trait `SerializableSecret` is not implemented for `CloneableStringInner`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `SerializableSecret`:
             ExportableArrayInner<N>
             ExportableStringInner
             ExportableVecInner
   = note: required for `Dynamic<CloneableStringInner>` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `CloneableVecInner: SerializableSecret` is not satisfied
  --> tests/compile-fail/serde_cloneable_without_marker.rs:20:35
   |
20 |     let _ = serde_json::to_string(&data);
   |             --------------------- ^^^^^ the trait `SerializableSecret` is not implemented for `CloneableVecInner`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `SerializableSecret`:
             ExportableArrayInner<N>
             ExportableStringInner
             ExportableVecInner
   = note: required for `Dynamic<CloneableVecInner>` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `CloneableArrayInner<32>: SerializableSecret` is not satisfied
  --> tests/compile-fail/serde_cloneable_without_marker.rs:21:35
   |
21 |     let _ = serde_json::to_string(&key);
   |             --------------------- ^^^^ the trait `SerializableSecret` is not implemented for `CloneableArrayInner<32>`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the following other types implement trait `SerializableSecret`:
             ExportableArrayInner<N>
             ExportableStringInner
             ExportableVecInner
   = note: required for `Fixed<CloneableArrayInner<32>>` to implement `serde_core::ser::Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`
